[IMP] v3.0.2 - add flex shrink css to Sign In Link to prevent word wrapping.

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -22,5 +22,9 @@
 		.nav-link {
 			padding: 10px 15px;
 		}
+
+		.no-shrink {
+			flex-shrink: 0;
+		}
 	}
 }
